--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
     <head>
-        <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/normalize.css">
-        <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/skeleton.css">
+        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="/css/skeleton.css">
+        <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     </html>
 
