--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,7 +31,7 @@
                     <h5>{{ .Title }}</h5>
                 </div>
                 <div class="four columns">
-                    <h5 class="u-pull-right">{{ .Date.Format "02 January 2006" }}</h5>
+                    {{ .Date.Format "02 Jan. 2006" }}
                 </div>
            </div>
            {{ end }}
