--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-
-    <head>
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/skeleton.css">
-        <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="/css/orchard.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    </html>
-
-    <body>
-        <div class="container header">
-
-            <div class="row">
-                <div class="three columns title">
-                    {{ .Site.Title }}
-                </div>
-                <div class="nine columns">
-                    <!-- menu placement -->
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <hr class="header-break">
-        </div>
+{{ partial "top.html" . }}
 
         <div class="container index">
             {{ range .Data.Pages }}
@@ -36,7 +11,6 @@
                 </div>
            </div>
            {{ end }}
-        </div>
-    </body>
+       </div>
 
-</html>
+{{ partial "bottom.html" . }}
