--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <div class="three columns title">
-                    {{ .Site.Title }}
+                    <a href="/">{{ .Site.Title }}</a>
                 </div>
                 <div class="nine columns">
                     <!-- menu placement -->
