--- a/static/css/orchard.css
+++ b/static/css/orchard.css
@@ -11,10 +11,12 @@ div.header {
     margin-bottom: 0;
 }
 
-div.header div.title {
+div.header div.title a {
     font-size: 3rem;
     line-height: 3.5rem;
     text-align: center;
+    color: inherit;
+    text-decoration: none;
 }
 
 @media (min-width: 550px) {
