Changed the color of links to orange

--- a/static/css/orchard.css
+++ b/static/css/orchard.css
@@ -5,6 +5,10 @@ body {
     font-family: "Lato-Light", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+a {
+    color: #FF530D;
+}
+
 /******************** Header ********************/
 
 div.header {
