--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/skeleton.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/orchard.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     </html>
 
