Created a separate bottom partial with profile links and a description

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,12 +6,10 @@
             <h1>{{.Title }}</h1>
         </div>
 
-        <hr>
-
         <div class="content">
             {{ .Content }}
         </div>
 
     </div>
 
-{{ partial "bottom.html" . }}
+{{ partial "bottom-single.html" . }}
