--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/css/orchard.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+        <title>{{ .Title }} | {{ .Site.Title }}</title>
     </html>
 
     <body>
