Added a line to the single template with the post date

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,6 +10,10 @@
             {{ .Content }}
         </div>
 
+        <div class="metadata">
+            <h4><i>Published on {{ .Date.Format "02 January 2006" }}.</i></h4>
+        </div>
+ 
     </div>
 
 {{ partial "bottom-single.html" . }}
