--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,9 @@
         </div>
 
         <div class="metadata">
-            <h4><i>Published on {{ .Date.Format "02 January 2006" }}.</i></h4>
+            <h4><i>Published on {{ .Date.Format "02 January 2006" }}. &nbsp;
+                   {{ .WordCount }} words. &nbsp;
+                   Approximately {{ .ReadingTime }} minute(s).</i></h4>
         </div>
  
     </div>
