--- a/static/css/orchard.css
+++ b/static/css/orchard.css
@@ -78,23 +78,23 @@ div.index > div.item > div.date {
 /******************** Post ********************/
 
 div.post h1 {
-    font-size: 4rem;
+    font-size: 3.2rem;
 }
 
 div.post h2 {
-    font-size: 3.5rem;
+    font-size: 2.9rem;
 }
 
 div.post h3 {
-    font-size: 3.0rem;
+    font-size: 2.6rem;
 }
 
 div.post h4 {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
 }
 
 div.post h5 {
-    font-size: 2.0rem;
+    font-size: 2.3rem;
 }
 
 div.post hr {
@@ -107,11 +107,12 @@ div.post a {
 }
 
 div.post > div.content p {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 }
 
 div.post > div.content li {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
+}
 }
 
 /* Based on sample code from
