--- a/static/css/orchard.css
+++ b/static/css/orchard.css
@@ -106,6 +106,10 @@ div.post a {
     text-decoration: none;
 }
 
+div.post > div.title h1 {
+    font-size: 4rem;
+}
+
 div.post > div.content p {
     font-size: 2.2rem;
 }
