--- a/static/css/orchard.css
+++ b/static/css/orchard.css
@@ -114,9 +114,9 @@ div.post > div.content p {
     font-size: 2.2rem;
 }
 
-div.post > div.content li {
+div.post > div.content ol {
     font-size: 2.2rem;
-}
+    list-style: decimal inside none;
 }
 
 /* Based on sample code from
@@ -134,9 +134,11 @@ div.post blockquote p {
     display: inline;
 }
 
-div.post ul {
+div.post > div.content ul {
+    font-size: 2.2rem;
     list-style: disc inside none;
 }
+
 
 div.post div.highlight {
     background: #002B36;
