Fixed the links in the footer

--- a/layouts/partials/bottom-single.html
+++ b/layouts/partials/bottom-single.html
@@ -7,12 +7,12 @@
                 <div class="four columns">
                     <i class="fa fa-github"></i><a style="text-decoration: none;" href="https://github.com/citruspi">&nbsp;&nbsp;&nbsp;&nbsp;citruspi</a>
                     <br>
-                    <i class="fa fa-twitter"></i><a style="text-decoration: none;" href="https://github.com/citruspi">&nbsp;&nbsp;&nbsp;@citruspi</a>
+                    <i class="fa fa-twitter"></i><a style="text-decoration: none;" href="https://twitter.com/citruspi">&nbsp;&nbsp;&nbsp;@citruspi</a>
                 </div>
                 <div class="four columns">
-                    <i class="fa fa-key"></i></i><a style="text-decoration: none;" href="gpg.mihirsingh.com">&nbsp;&nbsp;0xD59D91E6</a>
+                    <i class="fa fa-key"></i></i><a style="text-decoration: none;" href="http://gpg.mihirsingh.com">&nbsp;&nbsp;0xD59D91E6</a>
                     <br>
-                    <i class="fa fa-comments"></i><a style="text-decoration: none;" href="https://github.com/citruspi">&nbsp;&nbsp;citruspi/freenode</a>
+                    <i class="fa fa-comments"></i><a style="text-decoration: none;" href="http://freenode.net">&nbsp;&nbsp;citruspi/freenode</a>
                 </div>
                 <div class="four columns">student, developer, open source advocate, and security enthusiast
                 </div>
